fix: fix that the search container overlaps the nav menu on ipad pro

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -79,6 +79,7 @@ header {
 			.search-container {
 				align-items: center;
 				display: flex;
+				margin-left: rem(40);
 
 				svg {
 					fill: white;
